// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Component [Sprite] can create Sprite with extra props 1`] = `
<div
  className="someClass Sprite"
  someProp="@value"
  style={Object {}}
/>
`;

exports[`React Component [Sprite] can create empty Sprite 1`] = `
<div
  className=" Sprite"
  style={Object {}}
/>
`;
